refactor phase 3: java 21 patterns and string building